force-app/main/default/objects/TableauWorkbookURL__c/TableauWorkbookURL__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TableauWorkbookURL</label>
</CustomObject>