force-app/main/default/objects/TableauWorkbookURL__c/fields/TableauServerAddress__c.field-meta.xml
<CustomField>
    <fullName>TableauServerAddress__c</fullName>
    <label>Tableau Server Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>