force-app/main/default/objects/TableauWorkbookURL__c/fields/VisualforcePageURL__c.field-meta.xml
<CustomField>
    <fullName>VisualforcePageURL__c</fullName>
    <label>VisualforcePageURL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>