force-app/main/default/objects/TableauWorkbookURL__c/fields/Workbook1Name__c.field-meta.xml
<CustomField>
    <fullName>Workbook1Name__c</fullName>
    <label>Workbook_1_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>