force-app/main/default/objects/TableauWorkbookURL__c/fields/Workbook1URL__c.field-meta.xml
<CustomField>
    <fullName>Workbook1URL__c</fullName>
    <label>Workbook_1_URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>