force-app/main/default/objects/TableauWorkbookURL__c/fields/Workbook2Name__c.field-meta.xml
<CustomField>
    <fullName>Workbook2Name__c</fullName>
    <label>Workbook_2_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>