force-app/main/default/objects/TableauWorkbookURL__c/fields/Workbook2URL__c.field-meta.xml
<CustomField>
    <fullName>Workbook2URL__c</fullName>
    <label>Workbook_2_URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>