force-app/main/default/objects/TableauWorkbookURL__c/fields/Workbook3Name__c.field-meta.xml
<CustomField>
    <fullName>Workbook3Name__c</fullName>
    <label>Workbook_3_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>