force-app/main/default/objects/TableauWorkbookURL__c/fields/Workbook3URL__c.field-meta.xml
<CustomField>
    <fullName>Workbook3URL__c</fullName>
    <label>Workbook_3_URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>